--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Splash Screen</title>
-<meta http-equiv="refresh" content="0; url=http://www.mercbank.com/">
+    <meta charset="UTF-8">
+    <title>redirecting...you misspelled mercbank...you silly goose</title>
+    <meta http-equiv="refresh" content="0; url=http://www.mercbank.com/">
 </head>
 <body>
-<img src="splash.png" alt="Splash Screen">
 </body>
 </html>
